// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`effector plugin with attachCreators: with attachCreators 1`] = `

import { status } from "patronum/status";
const $status = status({ effect });

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/macro.test.ts';
import { status } from 'patronum/status';
const $status = status({
  and: {
    effect,
  },
  or: {
    loc: {
      file: _effectorFileName,
      line: 2,
      column: 16,
    },
    name: '$status',
    sid: 'j4rpgh',
  },
});


`;

exports[`effector plugin with fabrics and root import: with fabrics and root import 1`] = `

import { status } from "patronum";
const $status = status({ effect });

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/macro.test.ts';
import { withFactory as _withFactory } from 'effector';
import { status } from 'patronum';
const $status = _withFactory({
  sid: 'j4rpgh',
  fn: () =>
    status({
      effect,
    }),
  name: '$status',
  method: 'status',
  loc: {
    file: _effectorFileName,
    line: 2,
    column: 16,
  },
});


`;

exports[`effector plugin with fabrics: with fabrics 1`] = `

import { status } from "patronum/status";
const $status = status({ effect });

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/macro.test.ts';
import { withFactory as _withFactory } from 'effector';
import { status } from 'patronum/status';
const $status = _withFactory({
  sid: 'j4rpgh',
  fn: () =>
    status({
      effect,
    }),
  name: '$status',
  method: 'status',
  loc: {
    file: _effectorFileName,
    line: 2,
    column: 16,
  },
});


`;

exports[`macros import from root and rename import: import from root and rename import 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { withFactory as _withFactory } from 'effector';
import { debounce as _debounce } from '@effector/patronum';
import { status as _status } from '@effector/patronum';
const $status = _withFactory({
  sid: '-21v3re',
  fn: () =>
    _status({
      effect,
    }),
  name: '$status',
  method: 'status',
});
const last = _withFactory({
  sid: '-rwdk3s',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
  name: 'last',
  method: 'debounce',
});


`;

exports[`macros import from root, rename import and add loc: import from root, rename import and add loc 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/src/macro.test.ts';
import { withFactory as _withFactory } from 'effector';
import { debounce as _debounce } from '@effector/patronum';
import { status as _status } from '@effector/patronum';
const $status = _withFactory({
  sid: '-21v3re',
  fn: () =>
    _status({
      effect,
    }),
  name: '$status',
  method: 'status',
  loc: {
    file: _effectorFileName,
    line: 2,
    column: 16,
  },
});
const last = _withFactory({
  sid: '-rwdk3s',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
  name: 'last',
  method: 'debounce',
  loc: {
    file: _effectorFileName,
    line: 3,
    column: 13,
  },
});


`;

exports[`macros import from root: import from root 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { withFactory as _withFactory } from 'effector';
import { debounce as _debounce } from 'patronum';
import { status as _status } from 'patronum';
const $status = _withFactory({
  sid: '-21v3re',
  fn: () =>
    _status({
      effect,
    }),
  name: '$status',
  method: 'status',
});
const last = _withFactory({
  sid: '-rwdk3s',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
  name: 'last',
  method: 'debounce',
});


`;

exports[`macros macro for pending: macro for pending 1`] = `

import { pending } from './macro';
import { status } from './macro';
const effect = createEffect();
const $pending = pending({ effects: [effect] });

      ↓ ↓ ↓ ↓ ↓ ↓

import { status as _status } from '@effector/patronum';
import { withFactory as _withFactory } from 'effector';
import { pending as _pending } from '@effector/patronum';
const effect = createEffect();
const $pending = _withFactory({
  sid: 'mkcas6',
  fn: () =>
    _pending({
      effects: [effect],
    }),
  name: '$pending',
  method: 'pending',
});


`;

exports[`macros renames import: renames import 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { withFactory as _withFactory } from 'effector';
import { debounce as _debounce } from '@effector/patronum/debounce';
import { status as _status } from '@effector/patronum/status';
const $status = _withFactory({
  sid: '-21v3re',
  fn: () =>
    _status({
      effect,
    }),
  name: '$status',
  method: 'status',
});
const last = _withFactory({
  sid: '-rwdk3s',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
  name: 'last',
  method: 'debounce',
});


`;

exports[`macros with macro: with macro 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { withFactory as _withFactory } from 'effector';
import { debounce as _debounce } from 'patronum/debounce';
import { status as _status } from 'patronum/status';
const $status = _withFactory({
  sid: '-21v3re',
  fn: () =>
    _status({
      effect,
    }),
  name: '$status',
  method: 'status',
});
const last = _withFactory({
  sid: '-rwdk3s',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
  name: 'last',
  method: 'debounce',
});


`;
